--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -47,4 +47,11 @@
     <error-code>500</error-code>
     <location>/WEB-INF/error/500.html</location>
   </error-page>
+  
+   <resource-ref>
+       <description>DB Connection</description>
+       <res-ref-name>jdbc/oracleDB</res-ref-name>
+       <res-type>javax.sql.DataSource</res-type>
+       <res-auth>Container</res-auth>
+   </resource-ref> 
 </web-app>
