--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -53,4 +53,51 @@
     <res-type>javax.sql.DataSource</res-type>
     <res-auth>Container</res-auth>
   </resource-ref>
+  
+  <filter>
+  	<filter-name>loggingFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.LoggingFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>loggingFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+    <filter>
+  	<filter-name>characterSetFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.CharacterSetFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>characterSetFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+  <filter>
+  	<filter-name>requestCounterFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.RequestCounterFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>requestCounterFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+  
+   <filter>
+  	<filter-name>loginCheckFilter</filter-name>
+  	<filter-class>kr.or.ddit.filter.LoginCheckFilter</filter-class>
+  </filter>
+  <filter-mapping>
+  	<filter-name>loginCheckFilter</filter-name>
+  	<url-pattern>/*</url-pattern>
+  </filter-mapping>
+
 </web-app>
+
+
+
+
+
+
+
+
+
+
